# erayacpp

./: .gitignore  CMakeLists.txt  README.md
white/week_2/: CMakeLists.txt
white/week_2/10BusStops/: CMakeLists.txt  main.cpp
white/week_2/11BusStops2/: CMakeLists.txt  main.cpp
white/week_2/12UniqStrings/: CMakeLists.txt  main.cpp
white/week_2/13BuildMapValuesSet/: CMakeLists.txt  main.cpp
white/week_2/14SinonimLists/: CMakeLists.txt  main.cpp
white/week_2/15BusStops3/: CMakeLists.txt  main.cpp
white/week_2/1fact/: CMakeLists.txt  main.cpp
white/week_2/2Palindrom/: CMakeLists.txt  main.cpp
white/week_2/3PalindromFilter/: CMakeLists.txt  main.cpp
white/week_2/4Maximizator/: CMakeLists.txt  main.cpp
white/week_2/5MoveStrings/: CMakeLists.txt  main.cpp
white/week_2/6Reverse/: CMakeLists.txt  main.cpp
white/week_2/7AvTemp/: CMakeLists.txt  main.cpp
white/week_2/8Qeue/: CMakeLists.txt  main.cpp
white/week_2/9everymonthdeal/: CMakeLists.txt  main.cpp
white/week_4/: CMakeLists.txt
white/week_4/1LectureTitle/: CMakeLists.txt  main.cpp
white/week_4/1files/: CMakeLists.txt  main.cpp
white/week_4/2RevertFunct/: CMakeLists.txt  main.cpp
white/week_4/2precision/: CMakeLists.txt  main.cpp
white/week_4/3RevertFunct2/: CMakeLists.txt  main.cpp
white/week_4/3table/: CMakeLists.txt  main.cpp
white/week_4/4studetns/: CMakeLists.txt  main.cpp
white/week_4/5rational/: CMakeLists.txt  main.cpp
white/week_4/6EnsureEqual/: CMakeLists.txt  main.cpp
white/week_4/7rational2/: CMakeLists.txt  main.cpp
white/week_4/8calc/: CMakeLists.txt  main.cpp
(+75 files in other folders)
