
add_subdirectory(1fact)
add_subdirectory(2Palindrom)
add_subdirectory(3PalindromFilter)
add_subdirectory(4Maximizator)
add_subdirectory(5MoveStrings)
add_subdirectory(6Reverse)
add_subdirectory(8Qeue)
add_subdirectory(9everymonthdeal)
add_subdirectory(10BusStops)
add_subdirectory(11BusStops2)
add_subdirectory(12UniqStrings)
add_subdirectory(13BuildMapValuesSet)
add_subdirectory(14SinonimLists)
add_subdirectory(15BusStops3)
